fixed : alignment issue

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -9,7 +9,7 @@
   border: 1px solid black;
   background-color: white;
   top: 90px;
-  right: 40px;
+  right: 80px;
   z-index: 5;
 
   .cart-items {
